static/media/css/core.css
/* ... */
/* ------------------------------ */
/* Filter sprite positions ------ */
/* ------------------------------ */
.sprite-activitylines {
  background-position: 0 0;
  width: 30px;
  height: 30px;
}
.sprite-activitytype {
  background-position: 0 -80px;
  width: 30px;
  height: 30px;
}
.sprite-age {
  background-position: 0 -160px;
  width: 30px;
  height: 30px;
}
.sprite-badgetype {
  background-position: 0 -240px;
  width: 30px;
  height: 30px;
}
.sprite-date {
  background-position: 0 -320px;
  width: 30px;
  height: 30px;
}
.sprite-location {
  background-position: 0 -400px;
  width: 30px;
  height: 30px;
}
.sprite-organization {
  background-position: 0 -480px;
  width: 30px;
  height: 30px;
}
.sprite-search {
  background-position: 0 -560px;
  width: 30px;
  height: 30px;
}
.sprite-topic {
  background-position: 0 -640px;
  width: 30px;
  height: 30px;
}
.sprite-type {
  background-position: 0 -720px;
  width: 30px;
  height: 30px;
}
/* FAQ MAKE LOOK GOOD STYLES HERE */
.faq {
  /* "Split numbering" is what I'm calling the following
     ordered list numbering:
       1.  ...
       2a. ...
       2b. ...
     where 2 is the "split item"
   */

}
.faq ol,
.faq ul {
  margin-bottom: 10px;
}
.faq ol li,
.faq ul li {
  list-style-position: inside;
}
.faq .split-numbering,
.faq .split-numbering ol {
  counter-reset: section;
  list-style-type: none;
}
.faq .split-numbering li ol {
  counter-reset: subsection;
}
.faq .split-numbering li:before {
  counter-increment: section;
  content: counter(section) ". ";
  width: 2em;
  display: inline-block;
}
.faq li.split-item:before {
  visibility: hidden;
  position: absolute;
  left: -999em;
}
.faq li.split-item li:before {
  counter-increment: subsection;
  content: counter(section) counter(subsection, lower-alpha) ". ";
}
/* ABOUT STYLES */
.about .video {
  text-align: center;
  margin: 20px 0;
}
.about .org-list {
  list-style: none;
}

